Update first try

--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<h1> English and Portuguese Translations </h1> 
+<!DOCTYPE html>
+
+              <html>
+
+                             <head> 
+		
+			<h1 style="color:blue;"> Flavia Luz - English and Portuguese Translator </h1>
+											</head>
+			    
+
+                             <body>
+			<div>
+			<h1>
+			<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkoBTVu7yX7ndOfueBb_iiHtT2oboC8zJCXooDj7oxo6M-E6m0" alt="Translations written in a puzzle">
+			</h1>				
+
+                             <p> English and Portuguese translator based in Finland specializing in business communications and website translations.
+				 Increase your sales, reach a wider audience, be ahead of your competition, and make sell to one of the biggest markets in the world. 
+			    </p> 
+			</div>
+			
+			<div>
+
+			<p> What can you do to take your business to a new market?
+
+                             <ul>
+
+                             <li> Translations </li>
+			     <p> Interested in selling to Brazil? Interested in selling to the US and the UK? Translate your website, your contents,
+                                 and communications to reach a wider audience. Get ahead of the competition and see your business grow internationally.
+			    </p>
+
+			     <li> Transcriptions </li>
+			     <p> Transcription is a great tool for business that rely a lot in presentations, meetings and negociations. Keep everything that has been said in paper to avoid misscommunications,
+			         and legal liabilities. 
+			     </p>				
+
+                             <li> Proofreading </li>
+
+                             </ul>
+
+                             </p>
+			     </div>
+
+
+                             <p> Contact me to know more about my services
+
+                             <form action= "submit email"> <input type="text" placeholder="name"> <input type="text" placeholder= "insert email"> <button type="submit">Submit </button> </form>
+
+              </p>
+
+              </body>
+
+              </html>
