--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-
-              <html>
-
-                             <head> 
+<html>
+	<head> 
+		<style> 
+			<h1> {color:blue;}
+		</style>
+	          
 		
-			<h1 style="color:blue;"> Flavia Luz - English and Portuguese Translator </h1>
+			<h1> Flavia Luz - English and Portuguese Translator </h1>
 											</head>
 			    
 
