--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head> 
 		<style> 
-			<h1> {color:blue;}
+			<h1> {color:black;}
+			.larger-image{ width:400px;}
 		</style>
 	          
 		
